--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ a{
 }
 
 a > input{
-    margin: 30px;
+    margin-top: 10px;
     height: 30px;
     width: 100px;
     font-size: 1.1em;
@@ -42,7 +42,7 @@ a > input{
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.205);
 }
 
-main > div > input {
+main > #inputevent > input {
     text-align: center;
     margin: 50px;
     margin-top: 0;
@@ -56,7 +56,7 @@ main > div > input {
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.205);
 }
 
-main > div > input:hover {
+main > #inputevent> input:hover {
     background-color: rgb(196, 0, 0);
     height: 29px;
     width: 99px;
@@ -81,4 +81,68 @@ img {
     margin-bottom: 10px;
 }
 
+.player {
+    background-color: white;
+    color: black;
+    height: 30px;
+    margin: 0 40px 0 40px;
+    width: 120px;
+    text-align: center;
+    font-size: 1.1em;
+    border: 1px solid rgb(3, 0, 0);
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.205);
+}
+
+.player:hover {
+    background-color: rgb(220, 220, 220);
+    transition: .5s;
+}
+
+#versus {
+    font-size: 2em;
+    color: rgb(255, 183, 0);
+    text-shadow: 2px 2px 2px rgb(204, 123, 31);
+}
+
+.but {
+    background-color: rgb(107, 248, 64);
+    color: rgb(255, 255, 255);
+    height: 30px;
+    margin: 0 75px 0 75px;
+    width: 90px;
+    text-align: center;
+    font-size: 0.95em;
+    border: 1px solid rgb(3, 0, 0);
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.205);
+}
+
+.but:hover {
+    background-color: rgb(63, 203, 58);
+    transition: .5s;
+}
+
+#menu {
+    border: 2px solid gray;
+    background-color: rgba(128, 128, 128, 0.455);
+    border-radius: 8px;
+    padding: 20px;
+    width: 450px;
+    margin: auto;
+}
+
+#fight {
+    display: block;
+    margin: auto;
+    margin-top: 20px;
+    height: 30px;
+    width: 100px;
+    font-size: 1.1em;
+    background-color: rgb(182, 53, 10);
+    color: rgb(255, 255, 255);
+    border: 1px solid gray;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.205);
+}
 
